--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html, body {
     height: 80%;
     align-content: center;
     justify-content: center;
-    grid-template-rows: 1.5rem 45rem 1.5rem;
+    grid-template-rows: 2rem 45rem 2rem;
     grid-template-columns: 45rem;
 }
 
@@ -39,4 +39,19 @@ header {
 
 #footer-wrapper {
     background-color: rgb(197, 227, 255);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+}
+
+.clean-grid {
+    cursor: pointer;
+}
+
+#circle {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 55%;
+    background-color: rgb(21, 21, 21);
 }
