--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body {
     height: 100%;
     width: 100%;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #container {
@@ -21,28 +22,41 @@ html, body {
     grid-template-columns: 45rem;
 }
 
-header {
+#header-wrapper, #footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#header-wrapper {
     background-color: aquamarine;
+    padding: 0.7rem 1rem 0rem 1rem;
+}
+
+#grid-size-text {
+    width: 8rem;
+    height: 1rem;
+    background-color: azure;
+    text-align: end;
+    padding-right: 0.4rem;
+    border: 0.1rem black solid;
 }
 
 #sketch-container {
     display: grid;
-    background-color: blueviolet;
-    padding: 0.5rem;
+    background-color: aquamarine;
+    padding: 1rem;
 }
 
 .grid-cell {
     background-color: rgb(246, 242, 247);
-    border: 0.2rem solid;
+    border: 0.1rem solid;
     cursor: crosshair;
 }
 
 #footer-wrapper {
-    background-color: rgb(197, 227, 255);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+    background-color: aquamarine;
+    padding: 0rem 1rem 1rem 1rem;
 }
 
 .clean-grid {
@@ -55,3 +69,4 @@ header {
     border-radius: 55%;
     background-color: rgb(21, 21, 21);
 }
+
