--- a/style.css
+++ b/style.css
@@ -2,7 +2,16 @@ html, body {
     height: 100%;
     width: 100%;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Fredoka One', cursive;
+}
+
+input {
+    border: 0;
+}
+
+header {
+    color: rgb(8, 82, 78);
+    font-size: 1.5rem;
 }
 
 #container {
@@ -18,7 +27,7 @@ html, body {
     height: 80%;
     align-content: center;
     justify-content: center;
-    grid-template-rows: 2rem 45rem 2rem;
+    grid-template-rows: 2.5rem 45rem 2.5rem;
     grid-template-columns: 45rem;
 }
 
@@ -30,43 +39,116 @@ html, body {
 
 #header-wrapper {
     background-color: aquamarine;
-    padding: 0.7rem 1rem 0rem 1rem;
+    padding: 0.7rem 1.5rem 0rem 1.5rem;
+    border-radius: 5rem 5rem 0 0;
 }
 
 #grid-size-text {
     width: 8rem;
     height: 1rem;
-    background-color: azure;
+    background-color: rgb(228, 255, 255);
     text-align: end;
     padding-right: 0.4rem;
-    border: 0.1rem black solid;
+    border-right: 0.2rem rgb(86, 177, 219) solid;
+    border-radius: 25rem 0 0 25rem;
 }
 
 #sketch-container {
     display: grid;
     background-color: aquamarine;
-    padding: 1rem;
+    padding: 1.5rem;
 }
 
 .grid-cell {
     background-color: rgb(246, 242, 247);
-    border: 0.1rem solid;
+    border: 0.1rem rgb(213, 214, 224) solid;
     cursor: crosshair;
 }
 
 #footer-wrapper {
     background-color: aquamarine;
-    padding: 0rem 1rem 1rem 1rem;
+    padding: 0rem 1.5rem 1.5rem 1.5rem;
+    border-radius: 0 0 2rem 2rem;
 }
 
 .clean-grid {
     cursor: pointer;
+    font-size: 2rem;
+    font-weight: 1000;
+    color: aliceblue;
 }
 
-#circle {
+.grid-brush {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.grid-brush input[type="radio"]{
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}
+
+.grid-brush label {
     width: 1rem;
     height: 1rem;
     border-radius: 55%;
-    background-color: rgb(21, 21, 21);
+    border: 0.2rem rgb(83, 90, 145) solid;
+    margin: 0.2rem;
 }
 
+#black {
+    background-color: rgb(36, 40, 48);
+}
+
+#rainbow{
+    animation: rainbow-bg 2.5s linear;
+    animation-iteration-count: infinite;
+}
+
+.grid-brush input[type="radio"]:checked + label{
+    border: 0.2rem rgb(255, 255, 255) solid;
+}
+
+.grid-brush input[type="radio"]:focus + label{
+    border: 0.2rem rgb(255, 255, 255) solid;
+}
+
+@keyframes rainbow-bg{
+    100%,0%{
+        background-color: rgb(255,0,0);
+    }
+    8%{
+        background-color: rgb(255,127,0);
+    }
+    16%{
+        background-color: rgb(255,255,0);
+    }
+    25%{
+        background-color: rgb(127,255,0);
+    }
+    33%{
+        background-color: rgb(0,255,0);
+    }
+    41%{
+        background-color: rgb(0,255,127);
+    }
+    50%{
+        background-color: rgb(0,255,255);
+    }
+    58%{
+        background-color: rgb(0,127,255);
+    }
+    66%{
+        background-color: rgb(0,0,255);
+    }
+    75%{
+        background-color: rgb(127,0,255);
+    }
+    83%{
+        background-color: rgb(255,0,255);
+    }
+    91%{
+        background-color: rgb(255,0,127);
+    }
+}
